--- a/twitter/templates/base.html
+++ b/twitter/templates/base.html
@@ -8,10 +8,19 @@
   </head>
   <body>
     {% include 'navbar.html' %}
-    <br/>
     <div class="container">
-        {% block content %}
-        {% endblock content %}
+      <br/>
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        {% endfor %}
+      {% endif %}
+    
+      {% block content %}
+      {% endblock content %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
