--- a/twitter/templates/home.html
+++ b/twitter/templates/home.html
@@ -2,4 +2,11 @@
 
 {% block content %}
 <h1>Tweet!</h1>
+    {% for tweet in tweets %}
+    <div class="alert alert-dark" role="alert">
+        <strong>{{tweet.user}}</strong><br/>
+        {{tweet.body}}<br/><br/>
+        {{tweet.created_at}}
+    </div> 
+    {% endfor %}
 {% endblock content %}
