--- a/twitter/templates/profile.html
+++ b/twitter/templates/profile.html
@@ -6,31 +6,54 @@
     <div class="container text-center">
         <div class="row">
             <div class="col-8">
-                <h1>{{ profile.user.username}}'s Profile</h1>
+                <h1>{{ profile.user.username}}'s Profile</h1><br/><br/>
+                {% if tweets %}
+                  {% for tweet in tweets %}
+                    <div class="alert alert-dark" role="alert">
+                        <strong>{{tweet.user}}</strong><br/>
+                        {{tweet.body}}<br/><br/>
+                        {{tweet.created_at}}
+                    </div> 
+                  {% endfor %}
+                {% endif %}
             </div>
             <div class="col-4">
-                <div class="card">
-                    <h5 class="card-header">Follows</h5>
-                    <div class="card-body">
-                      <p class="card-text">
-                        {% for following in profile.follows.all %}
-                            <a href="{% url 'profile' following.user.id %}">@{{ following }} </a><br/>
-                        {% endfor %}
-                      </p>
-                    </div>
-                  </div>
-                <br/><br/>
-
-                <div class="card">
-                    <h5 class="card-header">Followed By</h5>
-                    <div class="card-body">
-                      <p class="card-text">
-                        {% for following in profile.followed_by.all %}
-                            <a href="{% url 'profile' following.user.id %}">@{{ following }} </a><br/>
-                        {% endfor %}
-                      </p>
-                    </div>
+              <br/><br/><br/><br/>
+              <div class="card">
+                <h5 class="card-header">Follows</h5>
+                <div class="card-body">
+                  <p class="card-text">
+                    {% for following in profile.follows.all %}
+                        <a href="{% url 'profile' following.user.id %}">@{{ following }} </a><br/>
+                    {% endfor %}
+                  </p>
                 </div>
+              </div>
+              <br/><br/>
+
+              <div class="card">
+                <h5 class="card-header">Followed By</h5>
+                <div class="card-body">
+                  <p class="card-text">
+                    {% for following in profile.followed_by.all %}
+                        <a href="{% url 'profile' following.user.id %}">@{{ following }} </a><br/>
+                    {% endfor %}
+                  </p>
+                </div>
+              </div>
+              <br/>
+              <form method=POST>
+                {% csrf_token %}
+                {% if profile in user.profile.follows.all %}
+                  <button class="btn btn-outline-danger" name="follow" value="unfollow" type="submit">
+                    Unfollow @{{profile.user.username|lower}}
+                  </button>
+                {% else %}
+                <button class="btn btn-outline-success" name="follow" value="follow" type="submit">
+                  Follow @{{profile.user.username|lower}}
+                </button>
+                {% endif %}
+              </form>
             </div>
         </div>
     </div>
