--- a/twitter/templates/home.html
+++ b/twitter/templates/home.html
@@ -1,12 +1,29 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Tweet!</h1>
-    {% for tweet in tweets %}
-    <div class="alert alert-dark" role="alert">
-        <strong>{{tweet.user}}</strong><br/>
-        {{tweet.body}}<br/><br/>
-        {{tweet.created_at}}
-    </div> 
-    {% endfor %}
+
+<div class="container text-center">
+    <div class="row">
+        <div class="col-8">
+
+            <h1>Tweet!</h1><br/>
+            {% for tweet in tweets %}
+            <div class="alert alert-dark" role="alert">
+                <strong>{{tweet.user}}</strong><br/>
+                {{tweet.body}}<br/><br/>
+                {{tweet.created_at}}
+            </div> <br/><br/>
+            {% endfor %}
+        </div>
+        <div class="col-4">
+            <br/><br/><br/><br/>
+
+            {% if form %}
+                <form method=POST>
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="btn btn-secondary">Post</button>
+                </form>
+              {% endif %}
+        </div>
 {% endblock content %}
