--- a/twitter/templates/login.html
+++ b/twitter/templates/login.html
@@ -8,7 +8,7 @@
         <div class="col-md-6 offset-md-3">
         <h1>Login</h1><br/>
 
-        <form method='POST' action="{% url 'login' %}"">
+        <form method='POST' action="{% url 'login' %}">
             {% csrf_token %}
             <div class="mb-3">
             <input type="text" class="form-control" name="username" placeholder="Enter your username"><br/>
