--- a/twitter/templates/home.html
+++ b/twitter/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
 
 <div class="container text-center">
@@ -9,9 +9,22 @@
             <h1>Tweet!</h1><br/>
             {% for tweet in tweets %}
             <div class="alert alert-dark" role="alert">
-                <strong>{{tweet.user}}</strong><br/>
-                {{tweet.body}}<br/><br/>
-                {{tweet.created_at}}
+                <div class="container">
+                    <div class="row">
+                        <div class="col-1">
+                            {% if tweet.user.profile.profile_image %}
+                              <img src="{{tweet.user.profile.profile_image.url}}" width=100 height=100 class="rounded-circle" alt="{{profile.user.username}}">
+                            {% else %}
+                              <img src="{% static 'images/default_profile_pic.png' %}" width=80 height=80 class="rounded-circle" alt="Profile Image">
+                            {% endif %}
+                        </div>
+                        <div class="col-10">
+                            <strong>{{tweet.user}}</strong><br/>
+                            {{tweet.body}}<br/><br/>
+                            {{tweet.created_at}}
+                        </div>
+                    </div>
+                </div>
             </div> <br/><br/>
             {% endfor %}
         </div>
