--- a/twitter/templates/profile.html
+++ b/twitter/templates/profile.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 
@@ -10,9 +11,23 @@
                 {% if tweets %}
                   {% for tweet in tweets %}
                     <div class="alert alert-dark" role="alert">
-                        <strong>{{tweet.user}}</strong><br/>
-                        {{tweet.body}}<br/><br/>
-                        {{tweet.created_at}}
+                      <div class="container">
+                        <div class="row">
+                          <div class="col-1">
+                            {% if profile.profile_image %}
+                              <img src="{{profile.profile_image.url}}" width=100 height=100 class="rounded-circle" alt="{{profile.user.username}}">
+                            {% else %}
+                              <img src="{% static 'images/default_profile_pic.png' %}" width=80 height=80 class="rounded-circle" alt="Profile Image">
+                            {% endif %}
+                          </div>
+
+                          <div class="col-10">
+                            <strong>{{tweet.user}}</strong><br/>
+                            {{tweet.body}}<br/><br/>
+                            {{tweet.created_at}}
+                          </div>
+                        </div>
+                      </div>
                     </div> 
                   {% endfor %}
                 {% endif %}
@@ -20,7 +35,7 @@
             <div class="col-4">
               <br/><br/><br/><br/>
               {% if profile.profile_image %}
-                <img src='{{profile.profile_image.url}}' style="width:100px; height:100px; border-radius: 10%;">
+                <img src='{{profile.profile_image.url}}' width=200 height=200 class="roundrd-circle">
                 <br/><br/>
               {% endif %}
               <div class="card">
