--- a/twitter/templates/register.html
+++ b/twitter/templates/register.html
@@ -5,7 +5,7 @@
 <h1>Register here</h1>
 <br/>
 
-    <form method='POST' action="">
+    <form method='POST' action="" enctype='multipart/form-data'>
         {% csrf_token %}
         {{form.as_p}}
         <br/>
