added share button

--- a/twitter/templates/show_tweet.html
+++ b/twitter/templates/show_tweet.html
@@ -6,8 +6,6 @@
     <div class="row">
         <div class="col-8">
 
-            <h1>Tweet!</h1><br/>
-            {% for tweet in tweets %}
             <div class="alert alert-dark" role="alert">
                 <div class="container">
                     <div class="row">
@@ -23,18 +21,16 @@
                             {{tweet.body}}<br/><br/>
                             {{ tweet.number_of_likes }} Likes -
                             {% if user in tweet.likes.all %}
-                                <a href={% url 'tweet_like' tweet.id %}><i class="fa-solid fa-heart" style="color:red"></i></a>
+                                <a href={% url 'tweet_like' tweet.id %}><i class="fa-solid fa-heart" style="color:red"></i></a> <br/>
                             {% else %}
-                                <a href={% url 'tweet_like' tweet.id %}><i class="fa fa-heart-o" style="color:red"></i></a>
-                            {% endif %} &nbsp;
-                            <a href="{% url 'tweet_show' tweet.id %}"><i class="fa-solid fa-share" style="color:grey"></i></a>
-                            <br/>
+                                <a href={% url 'tweet_like' tweet.id %}><i class="fa fa-heart-o" style="color:red"></i></a> <br/>
+                            {% endif %}
                             {{tweet.created_at}}
                         </div>
                     </div>
                 </div>
             </div> <br/><br/>
-            {% endfor %}
+
         </div>
         <div class="col-4">
             <br/><br/><br/><br/>
