--- a/twitter/templates/profile.html
+++ b/twitter/templates/profile.html
@@ -26,10 +26,12 @@
                             {{tweet.body}}<br/><br/>
                             {{ tweet.number_of_likes }} Likes -
                             {% if user in tweet.likes.all %}
-                                <a href={% url 'tweet_like' tweet.id %}>Unlike</a> <br/>
+                                <a href={% url 'tweet_like' tweet.id %}><i class="fa-solid fa-heart" style="color:red"></i></a>
                             {% else %}
-                                <a href={% url 'tweet_like' tweet.id %}>Like</a> <br/>
-                            {% endif %}
+                                <a href={% url 'tweet_like' tweet.id %}><i class="fa fa-heart-o" style="color:red"></i></a>
+                            {% endif %}&nbsp;
+                            <a href="{% url 'tweet_show' tweet.id %}"><i class="fa-solid fa-share" style="color:grey"></i></a>
+                            <br/>
                             {{tweet.created_at}}
                           </div>
                         </div>
