--- a/twitter/templates/navbar.html
+++ b/twitter/templates/navbar.html
@@ -1,3 +1,4 @@
+{% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home' %}">Twitter</a>
@@ -11,9 +12,6 @@
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'profile' request.user.id %}">My Profile</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           </li>
           {% else %} 
@@ -25,10 +23,24 @@
           </li>
           {% endif %}
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        
+        {% if user.is_authenticated %}
+        <ul class="navbar-nav ml-auto"> 
+          <li class="nav-link navbar-brand">
+          <small>Hello</small> <strong>{{ user }}</strong>
+          </li>
+          <li class="nav-link navbar-brand">
+            <a href="{% url 'profile' request.user.id %}">
+              {% if user.profile.profile_image %}
+                <img src="{{ user.profile.profile_image.url }}" class="rounded-circle" width=40 height=40>
+              {% else %}
+                <img src="{% static 'images/default_profile_pic.png' %}" class="rounded-circle" width=40 height=40>
+              {% endif %}
+              
+            </a>
+          </li>
+        </ul>
+        {% endif %}
       </div>
     </div>
   </nav>
