--- a/twitter/templates/navbar.html
+++ b/twitter/templates/navbar.html
@@ -22,6 +22,15 @@
             <a class="nav-link" href="{% url 'login' %}">Login</a>
           </li>
           {% endif %}
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Search
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="{% url 'search_user' %}">Search User</a></li>
+              <li><a class="dropdown-item" href="{% url 'search' %}">Search Tweet</a></li>
+            </ul>
+          </li>
         </ul>
         
         {% if user.is_authenticated %}
